Ajout des utilisateurs et liste des utilisateurs

--- a/app/src/main/res/layout/activity_acceuil.xml
+++ b/app/src/main/res/layout/activity_acceuil.xml
@@ -1,9 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginTop="70dp"
+    android:layout_gravity="center_vertical"
     tools:context=".AcceuilActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/Ajout_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ajouter"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_vertical" />
+
+    <Button
+        android:id="@+id/Modifier_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Modifier"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/Ajout_user"/>/>
+
+    <Button
+        android:id="@+id/Supprimer_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Supprimer"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/Modifier_user"/>
+
+    <Button
+        android:id="@+id/user_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Liste des utilisateurs"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/Supprimer_user"/>
+
+    </RelativeLayout>
