--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    tools:context=".MainActivity">
+    tools:context=".AddUserActivity">
 
     <TextView
         android:id="@+id/label_inscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Inscription"
+        android:text="Inscription d'utilisateur"
         android:textSize="60sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -34,6 +33,13 @@
         android:layout_marginTop="20dp"
         android:layout_below="@+id/username"/>
 
+    <EditText
+        android:id="@+id/profession"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Profession"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/email"/>
 
     <EditText
         android:id="@+id/password"
@@ -41,7 +47,7 @@
         android:layout_height="wrap_content"
         android:hint="Mot de passe"
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/email"/>
+        android:layout_below="@+id/profession"/>
     <EditText
         android:id="@+id/repassword"
         android:layout_width="match_parent"
@@ -57,16 +63,6 @@
         android:text="Inscription"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/repassword"/>
-
-    <Button
-        android:id="@+id/button_connexion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Connexion"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/button_inscription"/>
-
-
 
 
 </RelativeLayout>
